Update more tests