@@ -92,14 +92,14 @@ class CombinedInterlinedLegsFareServiceTest implements PlanTestConstants {
     var uses = List.copyOf(fare.getLegProducts().get(firstLeg));
     assertEquals(1, uses.size());
 
-    var firstLegUse = uses.get(0);
+    var firstLegUse = uses.getFirst();
     assertEquals(tenDollars, firstLegUse.product().price());
 
     var secondLeg = itinerary.getTransitLeg(1);
     uses = List.copyOf(fare.getLegProducts().get(secondLeg));
     assertEquals(1, uses.size());
 
-    var secondLegUse = uses.get(0);
+    var secondLegUse = uses.getFirst();
     assertEquals(tenDollars, secondLegUse.product().price());
 
     // the same far product is used for both legs as you only need to buy one
